<resources>
    <string name="app_name">牵手关心</string>
    <string name="main_name">牵手关心</string>
    <string name="identifying">正在识别…</string>
    <string name="album">相册</string>
    <string name="cash_tishi">很抱歉!程序出现异常退出!</string>
    <string name="network_error">网络开小差了,请检查网络</string>
    <string name="no_more">暂无更多数据</string>
    <string name="sdcard_is_null">找不到该设备SD卡!</string>
    <string name="local_album">本地相册</string>
    <string name="new_photo">拍照</string>
    <string name="select_photo">从手机相册选择</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="offline">设备不在线</string>
    <string name="monday">一</string>
    <string name="tuesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>
    <string name="sunday">日</string>
    <string name="countdown_day_hour_minute">距闹钟响起还有%1$d天%2$d小时%3$d分</string>
    <string name="countdown_hour_minute">距闹钟响起还有%1$d小时%2$d分</string>
    <string name="countdown_minute">距闹钟响起还有%1$d分钟</string>
    <string name="one_h">一</string>
    <string name="two_h">二</string>
    <string name="three_h">三</string>
    <string name="four_h">四</string>
    <string name="five_h">五</string>
    <string name="six_h">六</string>
    <string name="repeat_once">只响一次</string>
    <string name="day">日</string>
    <string name="every_day">每天</string>
    <string name="week_day">平日</string>
    <string name="week_end">周末</string>
    <string name="week">周</string>
    <string name="caesura">、</string>
    <string name="rampindex">段号：</string>
    <string name="rampvalue">功率(%):</string>
    <string name="ramptime">持续时间(ms):</string>
    <string name="laser_ramp_chart">波形预览</string>
    <string name="close">关闭</string>
    <string name="laser_rapm_del">删除段</string>
    <string name="laser_rapm_add">添加段</string>
    <string name="laser_rapm_update">修改段</string>
    <string name="centigrade">&#176;C</string>
    <string name="laser_insermode_series">连续模式</string>
    <string name="laser_insermode_pwm">PWM模式</string>
    <string name="laser_insermode_ramp">RAMP模式</string>
    <string name="laser_control_inner">内控</string>
    <string name="laser_control_wide">外控</string>
    <string name="laser_contrl_widedesc">设备正处于外控模式</string>
    <string name="nav_localdevice">本地设备列表</string>
    <string name="localdevice_ip">输入设备IP</string>
    <string name="localdevice_scan">局域网扫描</string>
    <string name="laser_device_local">本地连接</string>
    <string name="la_ipdesc">ip地址:</string>
    <string name="la_ippw">密码:</string>
    <string name="la_ip_desc">请输入设备的ip</string>
    <string name="la_pw_desc">请输入密码</string>
    <string name="la_ip_local">本地设备</string>
    <string name="la_port_desc">端口</string>
    <string name="laser_control_btrailway">申请专线</string>
    <string name="laser_qie_device">切换设备型号</string>
    <string name="user_withoutavatar">请先上传头像</string>
    <string name="next">下一步</string>
    <string name="laser_set_password">设置密码</string>
    <string name="laser_password_new">新密码</string>
    <string name="laser_verification_password">确认新密码</string>
    <string name="laser_devicemap">设备分布</string>
    <string name="laser_password_change">修改密码成功</string>
    <string name="jiepin">截屏</string>
    <string name="runingdata">运行数据</string>
    <string name="laser_chose_stime">请选择开始时间</string>
    <string name="laser_chose_etime">请选择结束时间</string>
    <string name="laser_dev_match">信息匹配</string>
    <string name="laser_success">成功</string>
    <string name="next_page">下一页</string>
    <string name="ercode_faild">二维码信息不对</string>
    <string name="occupy">占用</string>
    <string name="no_occupy">可用</string>
    <string name="no_install_marketapp">您的手机没有安装Android应用市场</string>
    <string name="laser_aftermarket">售后服务</string>
    <string name="laser_feedback_success">提交反馈成功</string>
    <string name="control_fail">授权失败</string>
    <string name="set_model">设置模式成功</string>
    <string name="switch_model">模式切换成功</string>
    <string name="raiway_success">申请专线成功</string>
    <string name="raiway_fail">申请专线失败</string>
    <string name="app_navi_name">GW Laser Tech</string>
    <string name="laser_password_old">旧密码</string>
    <string name="laser_connect_tip">请先连接上服务器</string>
    <string name="laser_no_device">请先连接设备</string>
    <string name="lan_device">局域网设备</string>
    <string name="laser_condevice_title">连接设备</string>
    <string name="laser_no_connect">未连接</string>
    <string name="no">无</string>
    <string name="home_please_connectdev">（ 请连接 ）</string>
    <string name="dialog_disconnect">你确定断开连接吗？</string>
    <string name="laser_control_tip">当前处于\"订阅模式\"\n如需进行远程操作请申请获取控制权</string>
    <string name="laser_btn_seton">设定开</string>
    <string name="laser_btn_setoff">设定关</string>
    <string name="laser_btn_laseroff">关激光</string>
    <string name="laser_btn_laseron">开激光</string>
    <string name="laser_btn_redlighton">开红光</string>
    <string name="laser_btn_redlightoff">关红光</string>
    <string name="laser_dialog_laseropen">是否打开激光？</string>
    <string name="illegal_frequcy">频率不能超过50000HZ</string>
    <string name="illegal_dc">脉宽不能超过100%</string>
    <string name="illegal_gonglv">功率不能超过100%</string>
    <string name="watertemper">冷却水温</string>
    <string name="waterspeed">水流量</string>
    <string name="vapourpress">气压</string>
    <string name="opticaltemper3">光纤温度3</string>
    <string name="opticaltemper2">光纤温度2</string>
    <string name="opticaltemper1">光纤温度1</string>
    <string name="humidity">内部湿度</string>
    <string name="envtemper">内部温度</string>
    <string name="laserpowerset">设定功率</string>
    <string name="laserpowerfk">反馈功率</string>
    <string name="giveup">放弃</string>
    <string name="statelogfaulttitle">故障列表</string>
    <string name="laser_clear_fault">清空</string>
    <string name="laser_version">版本更新</string>
    <string name="laser_version_noneed">已经是最新版本</string>
    <string name="cleanCahceing">清除缓存中...</string>
    <string name="laser_no_device_tip">当前网络未发现设备</string>
    <string name="laser_sure_connect">确认连接</string>
    <string name="la_ippw_pealse">请输入本机连接密码</string>
    <string name="cancel_scan">停止扫描</string>
    <string name="connect_wifi_tip">请先连接上局域网WiFi</string>
    <string name="net_same">请确保手机和设备连接相同无线网络</string>
    <string name="localdevice_scaning">正在扫描本地设备</string>
    <string name="login_fail">登录失败</string>
    <string name="laser_devicetypelist">设备型号</string>
    <string name="laser_control_not">没有控制权</string>
    <string name="laser_inner_not">处于外控模式</string>
    <string name="fault_list_title">当前故障</string>
    <string name="poweron">控制电源接通</string>
    <string name="poweroff">控制电源断开</string>
    <string name="systemon">系统就绪</string>
    <string name="systemoff">主电源断开</string>
    <string name="lighton">开激光输出</string>
    <string name="lightoff">关激光输出</string>
    <string name="temp_leak">温度报警</string>
    <string name="temp_nor">温度正常</string>
    <string name="faulton">故障指示</string>
    <string name="faultoff">故障解除</string>
    <string name="laseron">开激光</string>
    <string name="laseroff">关激光</string>
    <string name="localon">开定位</string>
    <string name="localoff">关定位</string>
    <string name="inner">设置内控模式</string>
    <string name="wide">设置外控模式</string>
    <string name="jerkon">急停操作</string>
    <string name="jerkoff">急停解除操作</string>
    <string name="coldlock">冷水互锁故障</string>
    <string name="coldnor">冷水互锁正常</string>
    <string name="pro_start">程序开始</string>
    <string name="pro_end">程序结束</string>
    <string name="wet_leak">内部湿度报警</string>
    <string name="wet_nor">内部湿度正常</string>
    <string name="qcw">置QCW模式</string>
    <string name="qcw_off">清QCW模式</string>
    <string name="contrl">网络获得主控权</string>
    <string name="contrl_off">网络解除主控权</string>
    <string name="apply">网络申请控制权</string>
    <string name="apply_cancel">解除网络申请控制权</string>
    <string name="driver1">1号驱动板通讯故障</string>
    <string name="driver1_rm">1号驱动板通讯故障解除</string>
    <string name="driver2">2号驱动板通讯故障</string>
    <string name="driver2_rm">2号驱动板通讯故障解除</string>
    <string name="driver3">3号驱动板通讯故障</string>
    <string name="driver3_rm">3号驱动板通讯故障解除</string>
    <string name="driver4">4号驱动板通讯故障</string>
    <string name="driver4_rm">4号驱动板通讯故障解除</string>
    <string name="ad">AD板通讯故障</string>
    <string name="ad_rm">AD板通讯故障解除</string>
    <string name="diode_temp_leak">二极体模块超温</string>
    <string name="diode_temp_nor">二极体模块超温解除</string>
    <string name="driver_temp">驱动模块超温</string>
    <string name="driver_temp_rm">驱动模块超温解除</string>
    <string name="water_temp">水温超限</string>
    <string name="water_temp_rm">水温超限解除</string>
    <string name="optical_temp">光纤温度超上限</string>
    <string name="optical_temp_rm">光纤温度超上限解除</string>
    <string name="reflet_up">激光反射能量超上限</string>
    <string name="reflet_nor">激光反射能量超上限解除</string>
    <string name="out_down">激光输出能量超下限</string>
    <string name="out_nor">激光输出能量超下限解除</string>
    <string name="diode_short">二极体短路故障</string>
    <string name="diode_short_rm">二极体短路故障解除</string>
    <string name="optical_cut">光纤断开</string>
    <string name="optical_cut_rm">光纤断开解除</string>
    <string name="wet_up">内部湿度超上限超湿</string>
    <string name="wet_up_rm">内部湿度超上限超湿解除</string>
    <string name="coldwaterlock">冷水互锁</string>
    <string name="coldwaterlock_rm">冷水互锁解除</string>
    <string name="jerk">急停</string>
    <string name="jerk_rm">急停解除</string>
    <string name="locallight">定位光故障</string>
    <string name="locallight_rm">定位光故障</string>
    <string name="spike_pluse">窄脉冲保护</string>
    <string name="spike_pluse_rm">窄脉冲保护解除</string>
    <string name="btn_switch">切换</string>
    <string name="laser_randomverify">授权控制校验码</string>
    <string name="laser_not_empty">不能为空</string>
    <string name="laser_randomverify_error">校验码错误</string>
    <string name="chartnodata">没有数据</string>
    <string name="loadpager_neterror">网络错误</string>
    <string name="btn_retry">重试</string>
    <string name="loadpager_empty">空空如也</string>
    <string name="loadpager_clickfresh">点击刷新</string>
    <string name="name">姓名</string>
    <string name="name_desc">请输入您的姓名</string>
    <string name="nickname">昵称</string>
    <string name="nickname_desc">请输入您的昵称</string>
    <string name="cannot_empty">不能为空</string>
    <string name="woman">女</string>
    <string name="man">男</string>
    <string name="ablum">上传手机上的相片</string>
    <string name="camera">拍照上传</string>
    <string name="apply_Fail">申请控制失败</string>
    <string name="apply_success">申请控制成功</string>
    <string name="loading">加载中...</string>
    <string name="laser_netDelay">网络延时</string>
    <string name="device_edit">编辑设备</string>
    <string name="device_delete">删除</string>
    <string name="device_del_tip">确定要删除该设备吗？</string>
    <string name="laser_disconnect">断开连接</string>
    <string name="online">在线</string>
    <string name="scan_code">扫码</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_print_data">PrintDataActivity</string>
    <string name="person_count">人数</string>
    <string name="decode_null">未发现二维码/条形码</string>
    <string name="Alignment_code">将取景对准条形码，即可自动 扫描。</string>
    <string name="request_timeout">请求超时</string>
    <string name="internal_server_error">请求服务器异常</string>
    <string name="back">返回</string>
    <string name="shen">省份</string>
    <string name="shi">城市</string>
    <string name="qu">区域</string>
    <string name="dian">门店</string>
    <string name="count">账号</string>
    <string name="message">消息</string>
    <string name="yeu">月</string>
    <string name="riis">日</string>
    <string name="yues">00月</string>
    <string name="years">0000年</string>
    <string name="ris">00日</string>
    <string name="qingshurusjh">请输入手机号</string>
    <string name="jingshuryzm">请输入验证码</string>
    <string name="shoujigesibzq">手机号码格式不正确</string>
    <string name="mimanull">密码不能为空</string>
</resources>